# workflows

./: .gitignore
.github/workflows/: build.yml  cleanup.yml  deploy.yml  go-lint.yml  go-unit-test.yml  py-lint.yml  py-test.yml  security.yml
example/golang-ci/: .dockerignore  .golangci.yml  Dockerfile  go.mod  main.go  werf.yml
example/golang-ci/.github/workflows/: ci.yml
example/python-ci/: pyproject.toml  werf.yml
example/python-ci/.github/workflows/: ci.yml
example/python-ci/src/example/: __init__.py  calculator.py
example/python-ci/tests/: __init__.py  test_calculator.py
